<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookShare</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="scan_text">请将方框对准二维码进行扫描</string>
    <string name="button_scan">扫一扫</string>
    <!-- LoginActivity -->
    <string name="login_logo_image">LOGO</string>
    <string name="login_register_button">注册</string>
    <string name="login_login_button">登录</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_error">account/password is not correct!</string>
    <!-- RegisterActivity -->
    <string name="register_confirm_button">确认</string>
    <string name="register_cancel_button">取消</string>
    <string name="register_username_hint">用户名</string>
    <string name="register_password_hint">密码</string>
    <string name="register_email_hint">E-mail</string>
    <string name="register_area_hint">地区</string>
    <!-- MainActivity-book listview -->
    <string name="action_personal_info">查看个人信息</string>
    <string name="action_check_own">查看自己的书</string>
    <string name="action_check_borrow">查看借来的书</string>
    <string name="action_sort">排序</string>
    <string name="action_exit">Exit</string>
    <string name="add_book">添加</string>
    <!-- MainActivity-inform listview -->
    <string name="refresh">刷新</string>

    <!-- api key &amp;apikey=060debf571622a801229c3e054267f80 -->
    <string name="add_friend">添加</string>
    <string name="group">组群</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="title_activity_bar_code_test">BarCodeTestActivity</string>
    <string name="title_activity_generate_qrcode">GenerateQRCodeActivity</string>
    <string name="title_activity_person_info">PersonInfoActivity</string>
    <string name="title_activity_group_member">GroupMemberActivity</string>
    <string name="title_activity_book_search">BookSearchActivity</string>
    <string name="title_activity_hot_book">HotBookActivity</string>
    <string name="title_activity_add_comment">AddCommentActivity</string>

</resources>
