<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/registerusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_username_hint" />

    <EditText
        android:id="@+id/registerpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/registeremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/registerarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/register_area_hint" />

    <CheckBox
        android:id="@+id/checkbox_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="注册为群组"
        android:textColor="@color/buttonfont_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >

        <ImageButton
            android:id="@+id/registerconfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/transparent"
            android:contentDescription="@string/register_confirm_button"
            android:onClick="confirm"
            android:src="@drawable/registerbutton" />

        <ImageButton
            android:id="@+id/registercancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/transparent"
            android:contentDescription="@string/register_cancel_button"
            android:onClick="cancel"
            android:src="@drawable/loginbutton" />
    </LinearLayout>

</LinearLayout>