<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_background"
    android:paddingRight="0dp" >

    <ImageView
        android:id="@+id/LOGO"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/login_logo_image"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:id="@+id/USERNAME_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LOGO"
        android:layout_marginTop="50dp" >

        <ImageView
            android:id="@+id/btn_select"
            android:layout_width="32dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:scaleType="fitXY"
            android:src="@drawable/down_pull" />

        <EditText
            android:id="@+id/USERNAME"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/btn_select"
            android:hint="@string/login_username_hint"
            android:inputType="textPersonName"
            android:singleLine="true" />
    </RelativeLayout>

    <EditText
        android:id="@+id/PASSWORD"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/USERNAME_linear_layout"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PASSWORD"
        android:layout_centerHorizontal="false"
        android:gravity="center" >

        <ImageButton
            android:id="@+id/REGISTER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@color/transparent"
            android:contentDescription="@string/login_register_button"
            android:onClick="Register"
            android:src="@drawable/registerbutton" />

        <ImageButton
            android:id="@+id/LOGIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/login_login_button"
            android:onClick="Login"
            android:src="@drawable/loginbutton" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="invisible" >
    </ProgressBar>

</RelativeLayout>